--- a/tutorial_TeX/RB_TotalEvidenceDating_FBD_Tutorial/RB_TotalEvidenceDating_FBD_Tutorial_content.tex
+++ b/tutorial_TeX/RB_TotalEvidenceDating_FBD_Tutorial/RB_TotalEvidenceDating_FBD_Tutorial_content.tex
@@ -462,6 +462,13 @@ age_Kretzoiarctos_beatrix   := tmrca(fbd_tree, clade("Kretzoiarctos_beatrix"))
 \end{lstlisting}
 \end{snugshade*}}
 
+{\begin{framed}
+You have completed the FBD model file. Save \cl{model\_FBD\_TEFBD.Rev} in the \cl{scripts} directory.
+
+We will now move on to the next model file.
+\end{framed}}
+
+
 \bigskip
 
 \subsection{The Uncorrelated Exponential Relaxed-Clock Model}\label{subsect:RB-ModelUCExp}
@@ -839,8 +846,7 @@ mccTree(trace_pruned, "output/bears.mcc.tre" )
 \end{lstlisting}
 \end{snugshade*}}
 
-There are sampled ancestors present in the tree. This makes visualizing the tree fairly difficult in traditional tree viewers. Today, we will make use of a browser-based tree viewer called \href{http://tgvaughan.github.io/icytree/}{IcyTree}. This tree viewer has the ability to view sampled ancestor trees, as well as many other nice abilities for tree visualization. Navigate to the page and open the tree. \par
-
+There are sampled ancestors present in the tree. This makes visualizing the tree fairly difficult in traditional tree viewers. Today, we will make use of a browser-based tree viewer called \href{http://tgvaughan.github.io/icytree/}{IcyTree}. This tree viewer has the ability to view sampled ancestor trees, as well as many other nice abilities for tree visualization. Navigate to the page and open the tree. 
 
 Try to replicate Fig.\ \ref{fig:IcyTreeSumm}. Hint: Look under style, at `Mark Singletons'. Why might a node with a sampled ancestor be referred to as a singleton? Try clicking on a branch. What are the fields telling you? Are the ages of the fossil tips the same as what was shown in Tracer? 
 
