more edits for TEFBD

--- a/tutorial_TeX/RB_TotalEvidenceDating_FBD_Tutorial/RB_TotalEvidenceDating_FBD_Tutorial_content.tex
+++ b/tutorial_TeX/RB_TotalEvidenceDating_FBD_Tutorial/RB_TotalEvidenceDating_FBD_Tutorial_content.tex
@@ -26,7 +26,7 @@ In this tutorial, our molecular data are best analyzed with a General Time-Rever
 \subsubsection{Morphological Character Change}
 
 The incorporation of morphological data from fossils into phylogenetic analyses allows us to directly observe organisms that existed in the past.
-In 2001, Paul Lewis described a model, the Mk model, to allow for the incorporation of morphology into likelihood and Bayesian analyses.
+\citet{Lewis2001} described a model, the Mk model, to allow for the incorporation of morphology into likelihood and Bayesian analyses.
 The Mk model uses a generalized Jukes-Cantor matrix.
 This introduces a number of assumptions. 
 One key assumption is that characters exhibit symmetrical change - that a given character is as likely to transition from a one state to another as it is to reverse.
@@ -55,7 +55,7 @@ Therefore, it is important to use models that can condition on the coding bias.
 RevBayes has two ways of doing this: one is used for datasets in which only parsimony informative characters are observed; the other is for datasets in which parsimony informative characters and non-parsimony informative variable characters (such as autapomorphies) are observed. \par
 
 
-\subsubsection{Lineage-Specific Substitution Rates}
+\subsubsection{Lineage-Rates of Evolution}
 
 Clocks \citep{Zuckerkandl1962} and relaxing them 
 
