--- a/tutorial_TeX/refs.bib
+++ b/tutorial_TeX/refs.bib
@@ -4908,6 +4908,15 @@ Their algorithms are available in BAMBE (Bayesian Analysis in Molecular Biology 
   Timestamp                = {2015.09.22}
 }
 
+@Article{Lewis2001,
+  Title                    = {A likelihood approach to estimating phylogeny from discrete morphological character data},
+  Author                   = {P. O. Lewis},
+  Journal                  = SYSBIO,
+  Year                     = {2001},
+  Pages                    = {913--925},
+  Volume                   = {50}
+}
+
 @Article{Lewis2005,
   Title                    = {{Polytomies and Bayesian Phylogenetic Inference}},
   Author                   = {Lewis, P.O. and Holder, M.T. and Holsinger, K.E.},
