more edits for TEFBD

--- a/tutorial_TeX/RB_TotalEvidenceDating_FBD_Tutorial/RB_TotalEvidenceDating_FBD_Tutorial_content.tex
+++ b/tutorial_TeX/RB_TotalEvidenceDating_FBD_Tutorial/RB_TotalEvidenceDating_FBD_Tutorial_content.tex
@@ -55,7 +55,7 @@ Therefore, it is important to use models that can condition on the coding bias.
 RevBayes has two ways of doing this: one is used for datasets in which only parsimony informative characters are observed; the other is for datasets in which parsimony informative characters and non-parsimony informative variable characters (such as autapomorphies) are observed. \par
 
 
-\subsubsection{Lineage-Rates of Evolution}
+\subsubsection{Lineage-Specific Rates of Evolution}
 
 Clocks \citep{Zuckerkandl1962} and relaxing them 
 
