added a full model module graph

--- a/tutorial_TeX/RB_TotalEvidenceDating_FBD_Tutorial/RB_TotalEvidenceDating_FBD_Tutorial_content.tex
+++ b/tutorial_TeX/RB_TotalEvidenceDating_FBD_Tutorial/RB_TotalEvidenceDating_FBD_Tutorial_content.tex
@@ -7,6 +7,16 @@ Exercise is in Section \ref{sect:RB-ExerciseMain}.
 
 \subsection{Models}
 
+The focus of this tutorial is to introduce you to specifying the models used in an analysis of fossil and extant taxa. 
+
+\begin{figure}[h!]
+\centering
+\fbox{\includegraphics[width=\textwidth,angle=0]{\ResourcePath figures/tikz/full_model_modular}}
+\caption{\small  }
+\label{fig:fbd_gm}
+\end{figure}
+
+
 \subsubsection{Lineage Diversification and Sampling}
 
 Birth-death processes and FBD
